--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,4 +1,16 @@
-.home {
+.app {
   display: flex;
-  min-height: 100vh;
+  flex-direction: row;
+  padding: 32px;
+  max-width: 1440px;
+  margin: auto;
+  gap: 32px;
+}
+
+@media(max-width:680px) {
+  .app {
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+  }
 }
