--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -10,6 +10,7 @@
   background-image: url("/images/dev.png"); 
   background-repeat: no-repeat;
   background-position: right bottom;
+  background-size: 450px;
   
   h1{
     color: $text-color;
