--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -5,6 +5,14 @@
   max-width: 1440px;
   margin: auto;
   gap: 32px;
+
+  .main-content {
+    position: relative;
+    width: calc(100% - 582px);
+    margin-left: auto;
+    padding-top: 40px;
+  }
+
 }
 
 @media(max-width:680px) {
@@ -12,5 +20,12 @@
     flex-direction: column;
     gap: 20px;
     padding: 20px;
+
+    .main-content {
+      position: relative;
+      width: 100%;
+      margin-left: unset;
+      padding-top: 0;
+    }
   }
 }
